fix: remove overflow property from af-container class in CSS

--- a/src/GlasFlex.Website/wwwroot/css/aero-flex.css
+++ b/src/GlasFlex.Website/wwwroot/css/aero-flex.css
@@ -11,7 +11,6 @@
     padding: var(--sp-m);
     box-shadow: var(--shadow-1);
     margin: var(--sp-m);
-    overflow: hidden;
 }
 
 .af-card {
